--- a/app/views/includes/head.jade
+++ b/app/views/includes/head.jade
@@ -44,6 +44,7 @@ head
     link(rel="stylesheet", href="css/lib/select2.css")
     link(rel="stylesheet", href='css/compiled/tables.css')
     link(rel="stylesheet", href='css/compiled/new-user.css')
+    link(rel="stylesheet", href='css/compiled/user-profile.css')
   else
     link(rel="stylesheet" href="css/views/home.css")
   link(rel="stylesheet" href="css/compiled/elements.css")
