--- a/public/css/compiled/user-profile.css
+++ b/public/css/compiled/user-profile.css
@@ -31,6 +31,10 @@
 }
 .user-profile .profile .section {
   margin-bottom: 80px;
+  border-top: 0;
+  box-shadow: 0;
+  margin-top: 0;
+  padding-top: 0;
 }
 .user-profile .profile .section.comment {
   margin-bottom: 100px;
