cleaned up aboutus and contact

--- a/app/views/pages/contactUsPage.jade
+++ b/app/views/pages/contactUsPage.jade
@@ -2,7 +2,7 @@
     .hero-unit
         h1 Contact Us
         p
-          | We want to talk with. Allow us to help streamline your sales and make your workflow easier and faster than ever.
+          | We want to talk with you. Allow us to help streamline your sales and make your workflow easier and faster than ever.
         p
 
           div#contact-area
