api docs change

--- a/app/views/pages/api.jade
+++ b/app/views/pages/api.jade
@@ -6,7 +6,7 @@ block content
 			h1 Api Implementation
 			h3 Auth
 			p
-				| For Mobile App development, get and post requests have been made available for testing purposes.  Our routing requires 2 parameters: email, password.  Once authentication has been set, you no longer need to pass these values.
+				| For Mobile App development, our routing requires 2 parameters: email, password.  Once authentication has been set, you no longer need to pass these values, I think, not sure if thats true on mobile, you may need to test that out, its possible you need username and password with every request.
 			p
 				ul
 					li
