--- a/public/views/leads/edit.html
+++ b/public/views/leads/edit.html
@@ -10,11 +10,11 @@
                     </div>
                     <div class="span12 field-box">
                         <label>Company:</label>
-                        <input class="span9" type="text" name="companyName" data-ng-model="lead.companyName"/>
+                        <input class="span9" type="text" name="companyName" data-ng-model="lead.companyName" placeholder="Company Name"/>
                     </div>
                     <div class="span12 field-box">
                         <label>Title:</label>
-                        <input class="span9" type="text" name="title" placeholder="Professional career" data-ng-model="lead.title"/>
+                        <input class="span9" type="text" name="title" placeholder="Professional Career Title" data-ng-model="lead.title"/>
                     </div>
                     <div class="span12 field-box">
                         <label>Email:</label>
@@ -28,17 +28,62 @@
                     <div class="span12 field-box">
                         <label>Address:</label>
                         <div class="address-fields">
-                            <input type="text" placeholder="Street address" class="span12" data-ng-model="address">
-                            <input type="text" placeholder="City" class="span12 small" data-ng-model="city">
+                            <input type="text" placeholder="Street address" class="span12" data-ng-model="lead.address">
+                            <input type="text" placeholder="City" class="span12 small" data-ng-model="lead.city">
                             <div id="state" class="ui-select small">
-                                <select>
-                                    <option value="AK">Alaska</option>
-                                    <option value="HI">Hawaii</option>
-                                    <option value="CA">California</option>
-                                    <option value="NV">Nevada</option>
-                                    <option value="OR">Oregon</option>
-                                    <option value="WA">Washington</option>
-                                    <option value="AZ">Arizona</option>
+                                <select data-ng-model="lead.state">
+                                    <option value="">Select State</option>
+                                    <option value="AL">Alabama</option> 
+                                    <option value="AK">Alaska</option> 
+                                    <option value="AZ">Arizona</option> 
+                                    <option value="AR">Arkansas</option> 
+                                    <option value="CA">California</option> 
+                                    <option value="CO">Colorado</option> 
+                                    <option value="CT">Connecticut</option> 
+                                    <option value="DE">Delaware</option> 
+                                    <option value="DC">District Of Columbia</option> 
+                                    <option value="FL">Florida</option> 
+                                    <option value="GA">Georgia</option> 
+                                    <option value="HI">Hawaii</option> 
+                                    <option value="ID">Idaho</option> 
+                                    <option value="IL">Illinois</option> 
+                                    <option value="IN">Indiana</option> 
+                                    <option value="IA">Iowa</option> 
+                                    <option value="KS">Kansas</option> 
+                                    <option value="KY">Kentucky</option> 
+                                    <option value="LA">Louisiana</option> 
+                                    <option value="ME">Maine</option> 
+                                    <option value="MD">Maryland</option> 
+                                    <option value="MA">Massachusetts</option> 
+                                    <option value="MI">Michigan</option> 
+                                    <option value="MN">Minnesota</option> 
+                                    <option value="MS">Mississippi</option> 
+                                    <option value="MO">Missouri</option> 
+                                    <option value="MT">Montana</option> 
+                                    <option value="NE">Nebraska</option> 
+                                    <option value="NV">Nevada</option> 
+                                    <option value="NH">New Hampshire</option> 
+                                    <option value="NJ">New Jersey</option> 
+                                    <option value="NM">New Mexico</option> 
+                                    <option value="NY">New York</option> 
+                                    <option value="NC">North Carolina</option> 
+                                    <option value="ND">North Dakota</option> 
+                                    <option value="OH">Ohio</option> 
+                                    <option value="OK">Oklahoma</option> 
+                                    <option value="OR">Oregon</option> 
+                                    <option value="PA">Pennsylvania</option> 
+                                    <option value="RI">Rhode Island</option> 
+                                    <option value="SC">South Carolina</option> 
+                                    <option value="SD">South Dakota</option> 
+                                    <option value="TN">Tennessee</option> 
+                                    <option value="TX">Texas</option> 
+                                    <option value="UT">Utah</option> 
+                                    <option value="VT">Vermont</option> 
+                                    <option value="VA">Virginia</option> 
+                                    <option value="WA">Washington</option> 
+                                    <option value="WV">West Virginia</option> 
+                                    <option value="WI">Wisconsin</option> 
+                                    <option value="WY">Wyoming</option>
                                 </select>
                             </div>
                             <input type="text" data-ng-model="lead.zip" placeholder="Postal Code" class="span12 small last">
@@ -50,7 +95,7 @@
                         <span class="charactersleft">90 characters remaining. Field limited to 100 characters</span>
                     </div>
                     <div class="span11 field-box actions">
-                        <input type="submit" value="Update user" class="btn-glow primary">
+                        <input type="submit" value="Update Lead" class="btn-glow primary">
                         <span>OR</span>
                         <input type="reset" class="reset" value="Cancel" onclick="window.history.back()">
                     </div>
