--- a/public/css/compiled/user-list.css
+++ b/public/css/compiled/user-list.css
@@ -39,9 +39,18 @@
   font-size: 14px;
   margin: 15px 0 0 0;
 }
+.users-list .table a.name:hover{
+  text-decoration: underline;
+}
+.users-list .table a.name:hover i{
+  text-decoration: none;
+  opacity: 1;
+  filter:alpha(opacity=100); /* For IE8 and earlier */
+}
+
 .users-list .table .subtext {
   font-size: 12px;
-  margin-left: 0;
+  margin-left: 40px;
   color: #778391;
   font-style: italic;
   margin-top: 0;
@@ -72,6 +81,24 @@
 }
 .users-list .table ul.actions i:hover {
   opacity: 1;
+}
+
+.users-list i.table-icon:hover{
+  text-decoration: none;
+  opacity: 1;
+  filter:alpha(opacity=100); /* For IE8 and earlier */
+}
+.users-list i.table-icon{
+  font-size: 30px;
+  top: 5px;
+  height: 24px;
+  left: 0;
+  opacity: 0.7;
+  filter:alpha(opacity=70); /* For IE8 and earlier */
+  position: relative;
+  transition: opacity 0.1s ease 0s;
+  width: 40px;
+  display:inline-block;
 }
 
 /* responsive */
