--- a/public/css/compiled/user-profile.css
+++ b/public/css/compiled/user-profile.css
@@ -7,7 +7,7 @@
 }
 .user-profile .header .name {
   font-weight: 600;
-  margin: 20px 0 8px 0;
+  margin: 0 0 5px;
   line-height: 26px;
   margin-bottom: 10px;
   float: none;
@@ -16,6 +16,7 @@
   color: #7d848c;
   font-style: italic;
   font-size: 14px;
+  margin-left: 64px;
 }
 .user-profile .header a.btn-flat {
   margin-top: 18px;
@@ -108,6 +109,21 @@
 }
 .user-profile .address ul i.ico-mail {
   margin-right: 5px;
+}
+.user-profile i.table-icon{
+  font-size: 65px;
+  top: 26px;
+  height: 24px;
+  left: 0;
+  opacity: 0.7;
+  filter:alpha(opacity=70); /* For IE8 and earlier */
+  position: relative;
+  transition: opacity 0.1s ease 0s;
+  width: 60px;
+  display:inline-block;
+}
+.user-profile h3 span{
+
 }
 
 /* responsive */
