--- a/public/css/compiled/new-user.css
+++ b/public/css/compiled/new-user.css
@@ -1,5 +1,5 @@
 .new-user {
-  /* form sidebar*/
+  margin:0;
 }
 .new-user .form-wrapper .with-sidebar {
   border-right: 1px solid #edeef1;
@@ -65,7 +65,7 @@
   height: 88px;
 }
 .new-user .textarea {
-  margin-top: 27px;
+  margin-top: 0px;
 }
 .new-user .textarea span.charactersleft {
   display: block;
@@ -112,6 +112,34 @@
 }
 .new-user .form-sidebar ul a {
   text-decoration: underline;
+}
+
+.new-user div.middle-text{
+  font-size: 13px;
+  font-weight: 600;
+  display: inline-block;
+  position: relative;
+}
+
+.new-user div.middle{
+  display: inline-block;
+  position: relative;
+  left:20px;
+  margin-right:45px;
+}
+.new-user .form-wrapper input.middle{
+  margin: 20px 20px 0 50px;
+  width: 59%;
+}
+.new-user .form-wrapper input.top{
+  margin: 20px 0px 20px 0px;
+}
+.new-user .address-fields table{
+  width: 100%;
+}
+.new-user .address-fields table td{
+  padding: 0 10px 10px 10px;
+  vertical-align:bottom;
 }
 
 /* responsive */
@@ -163,5 +191,38 @@
   }
   #state{
     width: 100%;
+  }
+}
+@media only screen and (max-width: 400px),
+(max-device-width: 400px)  {
+
+  /* Force table to not be like tables anymore */
+  table, thead, tbody, th, td, tr { 
+    display: block; 
+  }
+  
+  /* Hide table headers (but not display: none;, for accessibility) */
+  thead tr { 
+    position: absolute;
+    top: -9999px;
+    left: -9999px;
+  }
+  
+  td { 
+    /* Behave  like a "row" */
+    border: none;
+    position: relative;
+    padding-left: 50%; 
+  }
+  
+  td:before { 
+    /* Now like a table header */
+    position: absolute;
+    /* Top/left values mimic padding */
+    top: 6px;
+    left: 6px;
+    width: 45%; 
+    padding-right: 10px; 
+    white-space: nowrap;
   }
 }
