--- a/public/views/leads/view.html
+++ b/public/views/leads/view.html
@@ -6,8 +6,9 @@
             <h3 class="name"><i class="icon-user table-icon"></i><span>{{lead.firstName}} {{lead.lastName}}</span></h3>
             <span class="area">{{lead.title}} at {{lead.companyName | placeholder}}</span>
         </div>
+
         <div data-ng-show="global.user._id == lead.user._id">
-            <a class="btn-flat icon pull-right delete-user" data-toggle="tooltip" title="" data-placement="top" data-original-title="Delete user" data-ng-click="remove();">
+            <a class="btn-flat icon pull-right delete-user" data-toggle="tooltip" title="" data-placement="top" data-original-title="Delete Lead" data-ng-click="remove();">
                 <i class="icon-trash"></i>
             </a>
             <a class="btn-flat icon large pull-right edit" href="/#!/leads/{{lead._id}}/edit">
@@ -15,123 +16,135 @@
             </a>
         </div>
     </div>
+    <div class="tabbable"> <!-- Only required for left/right tabs -->
+        <ul class="nav nav-tabs">
+            <li class="active"><a href="#tab1" data-toggle="tab">General</a></li>
+            <li><a href="#tab2" data-toggle="tab">Site Survey</a></li>
+        </ul>
+        <div class="tab-content">
+            <div class="tab-pane active" id="tab1">
+                <div class="row-fluid profile">
+                    <!-- bio, new note & orders column -->
+                    <div class="span9 bio">
+                        <div class="profile-box">
+                            <!-- biography -->
+                            <div class="span12 section">
+                                <h6>Notes</h6>
+                                <p>{{lead.notes | placeholder}} </p>
+                            </div>
 
-    <div class="row-fluid profile">
-        <!-- bio, new note & orders column -->
-        <div class="span9 bio">
-            <div class="profile-box">
-                <!-- biography -->
-                <div class="span12 section">
-                    <h6>Notes</h6>
-                    <p>{{lead.notes | placeholder}} </p>
-                </div>
+                            <h6>Recent Estimates</h6>
+                            <br>
+                            <!-- recent orders table -->
+                            <table class="table table-hover">
+                                <thead>
+                                    <tr>
+                                        <th class="span2">
+                                            Order ID
+                                        </th>
+                                        <th class="span3">
+                                            <span class="line"></span>
+                                            Date
+                                        </th>
+                                        <th class="span3">
+                                            <span class="line"></span>
+                                            Items
+                                        </th>
+                                        <th class="span3">
+                                            <span class="line"></span>
+                                            Total amount
+                                        </th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    <!-- row -->
+                                    <tr class="first">
+                                        <td>
+                                            <a href="#">#459</a>
+                                        </td>
+                                        <td>
+                                            Jan 03, 2013
+                                        </td>
+                                        <td>
+                                            3
+                                        </td>
+                                        <td>
+                                            $ 3,500.00
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <td>
+                                            <a href="#">#510</a>
+                                        </td>
+                                        <td>
+                                            Feb 22, 2013
+                                        </td>
+                                        <td>
+                                            5
+                                        </td>
+                                        <td>
+                                            $ 800.00
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <td>
+                                            <a href="#">#618</a>
+                                        </td>
+                                        <td>
+                                            Jan 03, 2013
+                                        </td>
+                                        <td>
+                                            8
+                                        </td>
+                                        <td>
+                                            $ 3,499.99
+                                        </td>
+                                    </tr>
+                                </tbody>
+                            </table>
 
-                <h6>Recent Estimates</h6>
-                <br>
-                <!-- recent orders table -->
-                <table class="table table-hover">
-                    <thead>
-                        <tr>
-                            <th class="span2">
-                                Order ID
-                            </th>
-                            <th class="span3">
-                                <span class="line"></span>
-                                Date
-                            </th>
-                            <th class="span3">
-                                <span class="line"></span>
-                                Items
-                            </th>
-                            <th class="span3">
-                                <span class="line"></span>
-                                Total amount
-                            </th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <!-- row -->
-                        <tr class="first">
-                            <td>
-                                <a href="#">#459</a>
-                            </td>
-                            <td>
-                                Jan 03, 2013
-                            </td>
-                            <td>
-                                3
-                            </td>
-                            <td>
-                                $ 3,500.00
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>
-                                <a href="#">#510</a>
-                            </td>
-                            <td>
-                                Feb 22, 2013
-                            </td>
-                            <td>
-                                5
-                            </td>
-                            <td>
-                                $ 800.00
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>
-                                <a href="#">#618</a>
-                            </td>
-                            <td>
-                                Jan 03, 2013
-                            </td>
-                            <td>
-                                8
-                            </td>
-                            <td>
-                                $ 3,499.99
-                            </td>
-                        </tr>
-                    </tbody>
-                </table>
+                            <!-- new comment form -->
+                            <div class="span12 section comment">
+                                <h6>Add a quick note</h6>
+                                <p>Add a note about this user to keep a history of your interactions.</p>
+                                <textarea></textarea>
+                                <a href="#">Attach files</a>
+                                <div class="span12 submit-box pull-right">
+                                    <input type="submit" class="btn-glow primary" value="Add Note">
+                                    <span>OR</span>
+                                    <input type="reset" value="Cancel" class="reset">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
 
-                <!-- new comment form -->
-                <div class="span12 section comment">
-                    <h6>Add a quick note</h6>
-                    <p>Add a note about this user to keep a history of your interactions.</p>
-                    <textarea></textarea>
-                    <a href="#">Attach files</a>
-                    <div class="span12 submit-box pull-right">
-                        <input type="submit" class="btn-glow primary" value="Add Note">
-                        <span>OR</span>
-                        <input type="reset" value="Cancel" class="reset">
+                    <!-- side address column -->
+                    <div class="span3 address pull-right">
+                        <h6>Address</h6>
+                        <iframe width="300" height="133" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com.mx/?ie=UTF8&amp;t=m&amp;ll=19.715081,-155.071421&amp;spn=0.010746,0.025749&amp;z=14&amp;output=embed"></iframe>
+                        <ul>
+                            <li>{{lead.address | placeholder}}</li>
+                            <li>{{lead.city | placeholder}},</li>
+                            <li>{{lead.zip | placeholder}}, {{lead.state | placeholder}} United States.</li>
+                            <li class="ico-li">
+                                <i class="ico-phone"></i>
+                                {{lead.phoneMobile | placeholder}}
+                            </li>
+                            <li class="ico-li">
+                                <i class="ico-phone"></i>
+                                {{lead.phoneWork | placeholder}}
+                            </li>
+                             <li class="ico-li">
+                                <i class="ico-mail"></i>
+                                <a href="#">{{lead.email | placeholder}}</a>
+                            </li>
+                        </ul>
                     </div>
                 </div>
             </div>
-        </div>
-
-        <!-- side address column -->
-        <div class="span3 address pull-right">
-            <h6>Address</h6>
-            <iframe width="300" height="133" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com.mx/?ie=UTF8&amp;t=m&amp;ll=19.715081,-155.071421&amp;spn=0.010746,0.025749&amp;z=14&amp;output=embed"></iframe>
-            <ul>
-                <li>{{lead.address | placeholder}}</li>
-                <li>{{lead.city | placeholder}},</li>
-                <li>{{lead.zip | placeholder}}, {{lead.state | placeholder}} United States.</li>
-                <li class="ico-li">
-                    <i class="ico-phone"></i>
-                    {{lead.phoneMobile | placeholder}}
-                </li>
-                <li class="ico-li">
-                    <i class="ico-phone"></i>
-                    {{lead.phoneWork | placeholder}}
-                </li>
-                 <li class="ico-li">
-                    <i class="ico-mail"></i>
-                    <a href="#">{{lead.email | placeholder}}</a>
-                </li>
-            </ul>
+            <div class="tab-pane" id="tab2">
+                <site-survey-directive></site-survey-directive>
+            </div>
         </div>
     </div>
 </div>
