got the basics of siteSurvey working, need to work on toggle buttons next

--- a/public/css/compiled/new-user.css
+++ b/public/css/compiled/new-user.css
@@ -141,6 +141,9 @@
   padding: 0 10px 10px 10px;
   vertical-align:bottom;
 }
+.new-user .address-fields .truss{
+  margin-left:60px;
+}
 
 /* responsive */
 @media (max-width: 767px) {
