finished basic leads and siteSurvey

--- a/app/views/includes/foot.jade
+++ b/app/views/includes/foot.jade
@@ -29,6 +29,7 @@ script(type='text/javascript', src='/js/filters.js')
 //Application Services
 script(type='text/javascript', src='/js/services/global.js')
 script(type='text/javascript', src='/js/services/leads.js')
+script(type='text/javascript', src='/js/services/modal.js')
 
 //Application Controllers
 script(type='text/javascript', src='/js/controllers/leads.js')
