--- a/public/css/compiled/user-profile.css
+++ b/public/css/compiled/user-profile.css
@@ -1,3 +1,9 @@
+.user-profile h3{
+  font-size: 20px;
+}
+.user-profile .header{
+  margin-bottom:25px;
+}
 .user-profile .header .avatar {
   float: left;
   margin-right: 25px;
@@ -6,7 +12,7 @@
   top: 3px;
 }
 .user-profile .header .name {
-  font-weight: 600;
+  font-weight: 600;0
   margin: 0 0 5px;
   line-height: 26px;
   margin-bottom: 10px;
@@ -110,20 +116,23 @@
 .user-profile .address ul i.ico-mail {
   margin-right: 5px;
 }
+.margintop10{
+  margin-top:10px;
+}
 .user-profile i.table-icon{
-  font-size: 65px;
-  top: 26px;
-  height: 24px;
-  left: 0;
+  font-size: 34px;
   opacity: 0.7;
-  filter:alpha(opacity=70); /* For IE8 and earlier */
-  position: relative;
+  filter:alpha(opacity=70);
   transition: opacity 0.1s ease 0s;
-  width: 60px;
   display:inline-block;
 }
-.user-profile h3 span{
-
+.user-profile h1.main-title span{
+  font-size: 26px;
+  font-weight: 400;
+  margin-left: 10px;
+  position: relative;
+  top: 7px;
+  vertical-align: top;
 }
 
 /* responsive */
