--- a/public/views/leads/create/general.html
+++ b/public/views/leads/create/general.html
@@ -1,4 +1,4 @@
-<div id="pad-wrapper" class="new-user" data-ng-controller="LeadsController">
+<div class="margintop10 new-user" data-ng-controller="LeadsController">
     <div class="row-fluid header">
         <div class="row-fluid form-wrapper">
             <div class="span9 with-sidebar">
