--- a/public/css/compiled/new-user.css
+++ b/public/css/compiled/new-user.css
@@ -40,7 +40,6 @@
 #state{
   width: 30%;
   margin: 19px 20px 0;
-  height: 29px;
 }
 #state select{
   padding: 4px 30px 0 7px;
@@ -126,6 +125,7 @@
   position: relative;
   left:20px;
   margin-right:45px;
+  cursor:pointer;
 }
 .new-user .form-wrapper input.middle{
   margin: 20px 20px 0 50px;
