--- a/public/views/leads/view/general.html
+++ b/public/views/leads/view/general.html
@@ -1,8 +1,11 @@
-<div id="pad-wrapper" class="new-user" data-ng-controller="LeadsController" data-ng-init="findOne()">
+<div class="new-user" data-ng-controller="LeadsController" data-ng-init="findOne()">
     <div class="row-fluid header">
         <div class="row-fluid form-wrapper">
             <div class="span9 with-sidebar">
                 <form class="new_user_form" data-ng-submit="update()">
+                    <div class="span12 field-box">
+                        <h3>General</h3>
+                    </div>
                     <div class="span12 field-box">
                         <label>Name:</label>
                         <input type="text" data-ng-model="lead.firstName" placeholder="First Name" class="span12 small-inline" maxlength="30" required>
