--- a/public/views/leads/view/siteSurvey.html
+++ b/public/views/leads/view/siteSurvey.html
@@ -96,13 +96,13 @@
                         <label>Visiblity:</label>
                         <div class="address-fields">
                             <div class="middle-text">Solar Eye Availability Photo:</div>
-                            <div class="middle slider-frame primary">
-                                <span class="slider-button off" data-off-text="NO" data-on-text="YES">NO</span>
+                            <div class="middle slider-frame primary" ng-click="lead.siteNotes.eyeAvailability = !lead.siteNotes.eyeAvailability">
+                                <span ng-class="{'on' : lead.siteNotes.eyeAvailability, '' : !lead.siteNotes.eyeAvailability}" class="slider-button off">{{lead.siteNotes.eyeAvailability && 'YES' || 'NO'}}</span>
                             </div>
                             <input type="text" placeholder="Rafter Spacing and Size" class="span12 top" data-ng-model="lead.siteNotes.rafterSpacingAndSize">
                             <div class="middle-text">Engineered Truss:</div>
-                            <div class="middle slider-frame primary truss">
-                                <span class="slider-button off" data-off-text="NO" data-on-text="YES">NO</span>
+                            <div class="middle slider-frame primary truss" ng-click="lead.siteNotes.truss = !lead.siteNotes.truss">
+                                <span ng-class="{'on' : lead.siteNotes.truss, '' : !lead.siteNotes.truss}" class="slider-button off">{{lead.siteNotes.truss && 'YES' || 'NO'}}</span>
                             </div>
                             <input type="text" placeholder="Truss Type if not Engineered" class="span12 top" data-ng-model="lead.siteNotes.otherTruss">
                             <div class="span12 field-box textarea">
@@ -121,43 +121,59 @@
                             <table>
                                 <tr>
                                     <td><div class="middle-text">Site:</div></td>
-                                    <td><div class="middle slider-frame primary">
-                                <span class="slider-button off" data-off-text="NO" data-on-text="YES">NO</span>
-                            </div></td>
+                                    <td>
+                                        <div class="middle slider-frame primary" ng-click="lead.pictures.site = !lead.pictures.site">
+                                            <span ng-class="{'on' : lead.pictures.site, '' : !lead.pictures.site}" class="slider-button off">{{lead.pictures.site && 'YES' || 'NO'}}</span>
+                                        </div>
+                                    </td>
                                     <td><div class="middle-text">Shading Problems:</div></td>
-                                    <td><div class="middle slider-frame primary">
-                                <span class="slider-button off" data-off-text="NO" data-on-text="YES">NO</span>
-                            </div></td>
+                                    <td>
+                                        <div class="middle slider-frame primary" ng-click="lead.pictures.shadingProblems = !lead.pictures.shadingProblems">
+                                            <span ng-class="{'on' : lead.pictures.shadingProblems, '' : !lead.pictures.shadingProblems}" class="slider-button off">{{lead.pictures.shadingProblems && 'YES' || 'NO'}}</span>
+                                        </div>
+                                    </td>
                                 </tr>
                                 <tr>
                                     <td><div class="middle-text">Inverter Location:</div></td>
-                                    <td><div class="middle slider-frame primary">
-                                <span class="slider-button off" data-off-text="NO" data-on-text="YES">NO</span>
-                            </div></td>
+                                    <td>
+                                        <div class="middle slider-frame primary" ng-click="lead.pictures.inverterLocation = !lead.pictures.inverterLocation">
+                                            <span ng-class="{'on' : lead.pictures.inverterLocation, '' : !lead.pictures.inverterLocation}" class="slider-button off">{{lead.pictures.inverterLocation && 'YES' || 'NO'}}</span>
+                                        </div>
+                                    </td>
                                     <td><div class="middle-text">Array Location:</div></td>
-                                    <td><div class="middle slider-frame primary">
-                                <span class="slider-button off" data-off-text="NO" data-on-text="YES">NO</span>
-                            </div></td>
+                                    <td>
+                                        <div class="middle slider-frame primary" ng-click="lead.pictures.arrayLocation = !lead.pictures.arrayLocation">
+                                            <span ng-class="{'on' : lead.pictures.arrayLocation, '' : !lead.pictures.arrayLocation}" class="slider-button off">{{lead.pictures.arrayLocation && 'YES' || 'NO'}}</span>
+                                        </div>
+                                    </td>
                                 </tr>
                                 <tr>
                                     <td><div class="middle-text">Power Meter Closed:</div></td>
-                                    <td><div class="middle slider-frame primary">
-                                <span class="slider-button off" data-off-text="NO" data-on-text="YES">NO</span>
-                            </div></td>
+                                    <td>
+                                        <div class="middle slider-frame primary" ng-click="lead.pictures.powerMeterClosed = !lead.pictures.powerMeterClosed">
+                                            <span ng-class="{'on' : lead.pictures.powerMeterClosed, '' : !lead.pictures.powerMeterClosed}" class="slider-button off">{{lead.pictures.powerMeterClosed && 'YES' || 'NO'}}</span>
+                                        </div>
+                                    </td>
                                     <td><div class="middle-text">Breaker Panels Closed:</div></td>
-                                    <td><div class="middle slider-frame primary">
-                                <span class="slider-button off" data-off-text="NO" data-on-text="YES">NO</span>
-                            </div></td>
+                                    <td>
+                                        <div class="middle slider-frame primary" ng-click="lead.pictures.breakerPanelsClosed = !lead.pictures.breakerPanelsClosed">
+                                            <span ng-class="{'on' : lead.pictures.breakerPanelsClosed, '' : !lead.pictures.breakerPanelsClosed}" class="slider-button off">{{lead.pictures.breakerPanelsClosed && 'YES' || 'NO'}}</span>
+                                        </div>
+                                    </td>
                                 </tr>
                                 <tr>
                                     <td><div class="middle-text">Power Meter Open:</div></td>
-                                    <td><div class="middle slider-frame primary">
-                                <span class="slider-button off" data-off-text="NO" data-on-text="YES">NO</span>
-                            </div></td>
+                                    <td>
+                                        <div class="middle slider-frame primary" ng-click="lead.pictures.powerMeterOpen = !lead.pictures.powerMeterOpen">
+                                            <span ng-class="{'on' : lead.pictures.powerMeterOpen, '' : !lead.pictures.powerMeterOpen}" class="slider-button off">{{lead.pictures.powerMeterOpen && 'YES' || 'NO'}}</span>
+                                        </div>
+                                    </td>
                                     <td><div class="middle-text">Breaker Panels Open:</div></td>
-                                    <td><div class="middle slider-frame primary">
-                                <span class="slider-button off" data-off-text="NO" data-on-text="YES">NO</span>
-                            </div></td>
+                                    <td>
+                                        <div class="middle slider-frame primary" ng-click="lead.pictures.breakerPanelsOpen = !lead.pictures.breakerPanelsOpen">
+                                            <span ng-class="{'on' : lead.pictures.breakerPanelsOpen, '' : !lead.pictures.breakerPanelsOpen}" class="slider-button off">{{lead.pictures.breakerPanelsOpen && 'YES' || 'NO'}}</span>
+                                        </div>
+                                    </td>
                                 </tr>
 
                             </table>
@@ -176,11 +192,12 @@
                     </div>
                     <div class="span12 field-box">
                         <label>System Type:</label>
-                        <div class="ui-select small">
+                        <div class="ui-select span3">
                             <select data-ng-model="lead.customerExpectation.systemType">
-                                <option value="">Grid Interactive</option>
-                                <option value="">Grid Interactive With Battery Backup</option>
-                                <option value="">Off Grid</option>
+                                <option value="">Please Select System Type</option>
+                                <option value="Grid Interactive">Grid Interactive</option>
+                                <option value="Grid Interactive With Battery Backup">Grid Interactive With Battery Backup</option>
+                                <option value="Off Grid">Off Grid</option>
                             </select>
                         </div>
                     </div>
@@ -217,13 +234,3 @@
         </div>
     </div>
 </div>
-<script type="text/javascript">
-// Switch slide buttons
-$('.slider-button').click(function() {
-    if ($(this).hasClass("on")) {
-        $(this).removeClass('on').html($(this).data("off-text"));
-    } else {
-        $(this).addClass('on').html($(this).data("on-text"));
-    }
-}); 
-</script>
